include/epanet2_1.h

  
  int  DLLEXPORT ENsaveinpfile(const char *filename);
  int  DLLEXPORT ENclose();
  int  DLLEXPORT ENsolveH();
  int  DLLEXPORT ENsaveH();
  int  DLLEXPORT ENopenH();
  int  DLLEXPORT ENinitH(int initFlag);
  int  DLLEXPORT ENrunH(long *currentTime);
  int  DLLEXPORT ENnextH(long *tStep);
  int  DLLEXPORT ENcloseH();
  int  DLLEXPORT ENsavehydfile(char *filename);
  int  DLLEXPORT ENusehydfile(char *filename);
  int  DLLEXPORT ENsolveQ();
  int  DLLEXPORT ENopenQ();
  int  DLLEXPORT ENinitQ(int saveFlag);
  int  DLLEXPORT ENrunQ(long *currentTime);
  int  DLLEXPORT ENnextQ(long *tStep);
  int  DLLEXPORT ENstepQ(long *timeLeft);
  int  DLLEXPORT ENcloseQ();
  int  DLLEXPORT ENwriteline(char *line);
  int  DLLEXPORT ENreport();
  int  DLLEXPORT ENresetreport();
  int  DLLEXPORT ENsetreport(char *reportFormat);
  int  DLLEXPORT ENsetstatusreport(int code);
  int  DLLEXPORT ENgetcount(int code, int *count);
  int  DLLEXPORT ENgeterror(int errcode, char *errmsg, int maxLen);
  int  DLLEXPORT ENgetstatistic(int code, EN_API_FLOAT_TYPE* value);
  int  DLLEXPORT ENgetoption(int code, EN_API_FLOAT_TYPE *value);
  int  DLLEXPORT ENsetoption(int code, EN_API_FLOAT_TYPE v);
  int  DLLEXPORT ENgetflowunits(int *code);
  int  DLLEXPORT ENsetflowunits(int code);
  int  DLLEXPORT ENgettimeparam(int code, long *value);
  int  DLLEXPORT ENsettimeparam(int code, long value);
  int  DLLEXPORT ENgetqualinfo(int *qualcode, char *chemname, char *chemunits,
      int *tracenode);
  int  DLLEXPORT ENgetqualtype(int *qualcode, int *tracenode);
  int  DLLEXPORT ENsetqualtype(int qualcode, char *chemname, char *chemunits,
      char *tracenode);
  int DLLEXPORT ENaddnode(char *id, EN_NodeType nodeType);
  int DLLEXPORT ENdeletenode(int index, int actionCode);
  int  DLLEXPORT ENgetnodeindex(char *id, int *index);
  int  DLLEXPORT ENgetnodeid(int index, char *id);
  int DLLEXPORT ENsetnodeid(int index, char *newid);
  int  DLLEXPORT ENgetnodetype(int index, int *code);
  int  DLLEXPORT ENgetnodevalue(int index, int code, EN_API_FLOAT_TYPE *value);
  int  DLLEXPORT ENsetnodevalue(int index, int code, EN_API_FLOAT_TYPE v);
  int  DLLEXPORT ENgetcoord(int index, EN_API_FLOAT_TYPE *x, EN_API_FLOAT_TYPE *y);
  int  DLLEXPORT ENsetcoord(int index, EN_API_FLOAT_TYPE x, EN_API_FLOAT_TYPE y);
  int DLLEXPORT ENgetdemandmodel(int *type, EN_API_FLOAT_TYPE *pmin,
      EN_API_FLOAT_TYPE *preq, EN_API_FLOAT_TYPE *pexp);
  int DLLEXPORT ENsetdemandmodel(int type, EN_API_FLOAT_TYPE pmin,
      EN_API_FLOAT_TYPE preq, EN_API_FLOAT_TYPE pexp);
  int  DLLEXPORT ENgetnumdemands(int nodeIndex, int *numDemands);
  int  DLLEXPORT ENgetbasedemand(int nodeIndex, int demandIndex,
      EN_API_FLOAT_TYPE *baseDemand);
  int  DLLEXPORT ENsetbasedemand(int nodeIndex, int demandIndex,
      EN_API_FLOAT_TYPE baseDemand);
  int  DLLEXPORT ENgetdemandpattern(int nodeIndex, int demandIndex, int *pattIndex);
  int  DLLEXPORT ENsetdemandpattern(int nodeIndex, int demandIndex, int patIndex);
  int DLLEXPORT ENgetdemandname(int nodeIndex, int demandIdx, char *demandName);
  int DLLEXPORT ENsetdemandname(int nodeIndex, int demandIdx, char *demandName);
  int DLLEXPORT ENaddlink(char *id, EN_LinkType linkType, char *fromNode, char *toNode);
  int DLLEXPORT ENdeletelink(int index, int actionCode);
  int  DLLEXPORT ENgetlinkindex(char *id, int *index);
  int  DLLEXPORT ENgetlinkid(int index, char *id);
  int DLLEXPORT ENsetlinkid(int index, char *newid);
  int  DLLEXPORT ENgetlinktype(int index, EN_LinkType *code);
  int  DLLEXPORT ENsetlinktype(int *index, EN_LinkType Code, int actionCode);
  int  DLLEXPORT ENgetlinknodes(int index, int *node1, int *node2);
  int  DLLEXPORT ENsetlinknodes(int index, int node1, int node2);
  int  DLLEXPORT ENgetlinkvalue(int index, int code, EN_API_FLOAT_TYPE *value);
  int  DLLEXPORT ENsetlinkvalue(int index, int code, EN_API_FLOAT_TYPE v);