include/epanet2.cs


        [DllImport(EPANETDLL, EntryPoint = "ENopenX")]
        public static extern int ENopenX(string inpFile, string rptFile, string outFile);

        [DllImport(EPANETDLL, EntryPoint = "ENgettitle")]
        public static extern int ENgettitle(string titleline1, string titleline2, string titleline3);

        [DllImport(EPANETDLL, EntryPoint = "ENsettitle")]
        public static extern int ENsettitle(string titleline1, string titleline2, string titleline3);

        [DllImport(EPANETDLL, EntryPoint = "ENsaveinpfile")]
        public static extern int ENsaveinpfile(string filename);

        [DllImport(EPANETDLL, EntryPoint = "ENclose")]
        public static extern int ENclose();


        //Hydraulic Analysis Functions
        [DllImport(EPANETDLL, EntryPoint = "ENsolveH")]
        public static extern int ENsolveH();

        [DllImport(EPANETDLL, EntryPoint = "ENsaveH")]
        public static extern int ENsaveH();

        [DllImport(EPANETDLL, EntryPoint = "ENopenH")]
        public static extern int ENopenH();

        [DllImport(EPANETDLL, EntryPoint = "ENinitH")]
        public static extern int ENinitH(int initFlag);

        [DllImport(EPANETDLL, EntryPoint = "ENrunH")]
        public static extern int ENrunH(ref long currentTime);

        [DllImport(EPANETDLL, EntryPoint = "ENnextH")]
        public static extern int ENnextH(ref long tStep);

        [DllImport(EPANETDLL, EntryPoint = "ENcloseH")]
        public static extern int ENcloseH();

        [DllImport(EPANETDLL, EntryPoint = "ENsavehydfile")]
        public static extern int ENsavehydfile(string filename);

        [DllImport(EPANETDLL, EntryPoint = "ENusehydfile")]
        public static extern int ENusehydfile(string filename);


        //Water Quality Analysis Functions
        [DllImport(EPANETDLL, EntryPoint = "ENsolveQ")]
        public static extern int ENsolveQ();

        [DllImport(EPANETDLL, EntryPoint = "ENopenQ")]
        public static extern int ENopenQ();

        [DllImport(EPANETDLL, EntryPoint = "ENinitQ")]
        public static extern int ENinitQ(int saveFlag);

        [DllImport(EPANETDLL, EntryPoint = "ENrunQ")]
        public static extern int ENrunQ(ref long currentTime);

        [DllImport(EPANETDLL, EntryPoint = "ENnextQ")]
        public static extern int ENnextQ(ref long tStep);

        [DllImport(EPANETDLL, EntryPoint = "ENstepQ")]
        public static extern int ENstepQ(ref long timeLeft);

        [DllImport(EPANETDLL, EntryPoint = "ENcloseQ")]
        public static extern int ENcloseQ();


        //Reporting Functions
        [DllImport(EPANETDLL, EntryPoint = "ENwriteline")]
        public static extern int ENwriteline(string line);

        [DllImport(EPANETDLL, EntryPoint = "ENreport")]
        public static extern int ENreport();

        [DllImport(EPANETDLL, EntryPoint = "ENcopyreport")]
        public static extern int ENcopyreport(string filename);

        [DllImport(EPANETDLL, EntryPoint = "ENclearreport")]
        public static extern int ENclearreport();

        [DllImport(EPANETDLL, EntryPoint = "ENresetreport")]
        public static extern int ENresetreport();

        [DllImport(EPANETDLL, EntryPoint = "ENsetreport")]
        public static extern int ENsetreport(string format);

        [DllImport(EPANETDLL, EntryPoint = "ENsetstatusreport")]
        public static extern int ENsetstatusreport(int level);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcount")]
        public static extern int ENgetcount(int code, ref int count);

        [DllImport(EPANETDLL, EntryPoint = "ENgeterror")]
        public static extern int ENgeterror(int errcode, string errmsg, int maxLen);

        [DllImport(EPANETDLL, EntryPoint = "ENgetstatistic")]
        public static extern int ENgetstatistic(int type, ref int value);

        [DllImport(EPANETDLL, EntryPoint = "ENgetresultindex")]
        public static extern int ENgetresultindex(int type, int index, ref int value);

        [DllImport(EPANETDLL, EntryPoint = "ENtimetonextevent")]
        public static extern int ENtimetonextevent(ref int eventType, ref long duration, ref int elementIndex);


        //Analysis Options Functions
        [DllImport(EPANETDLL, EntryPoint = "ENgetoption")]
        public static extern int ENgetoption(int option, ref float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetoption")]
        public static extern int ENsetoption(int option, ref float value);

        [DllImport(EPANETDLL, EntryPoint = "ENgetflowunits")]
        public static extern int ENgetflowunits(ref int units);

        [DllImport(EPANETDLL, EntryPoint = "ENsetflowunits")]
        public static extern int ENsetflowunits(int units);

        [DllImport(EPANETDLL, EntryPoint = "ENgettimeparam")]
        public static extern int ENgettimeparam(int param, ref int value);

        [DllImport(EPANETDLL, EntryPoint = "ENsettimeparam")]
        public static extern int ENsettimeparam(int optioncode, long value);

        [DllImport(EPANETDLL, EntryPoint = "ENgetqualinfo")]
        public static extern int ENgetqualinfo(ref int qualType, string chemName, string chemUnits, ref int traceNode);

        [DllImport(EPANETDLL, EntryPoint = "ENgetqualtype")]
        public static extern int ENgetqualtype(ref int qualType, ref int traceNode);

        [DllImport(EPANETDLL, EntryPoint = "ENsetqualtype")]
        public static extern int ENsetqualtype(int qualType, string chemName, string chemUnits, string traceNode);


        //Node Functions
        [DllImport(EPANETDLL, EntryPoint = "ENaddnode")]
        public static extern int ENaddnode(string id, int nodeType, ref int index);

        [DllImport(EPANETDLL, EntryPoint = "ENdeletenode")]
        public static extern int ENdeletenode(int index, int actionCode);

        [DllImport(EPANETDLL, EntryPoint = "ENgetnodeindex")]
        public static extern int ENgetnodeindex(string id, ref int index);

        [DllImport(EPANETDLL, EntryPoint = "ENgetnodeid")]
        public static extern int ENgetnodeid(int index, string id);

        [DllImport(EPANETDLL, EntryPoint = "ENsetnodeid")]
        public static extern int ENsetnodeid(int index, string newid);

        [DllImport(EPANETDLL, EntryPoint = "ENgetnodetype")]
        public static extern int ENgetnodetype(int index, ref int nodeType);

        [DllImport(EPANETDLL, EntryPoint = "ENgetnodevalue")]
        public static extern int ENgetnodevalue(int index, int param, ref float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetnodevalue")]
        public static extern int ENsetnodevalue(int index, int param, float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetjuncdata")]
        public static extern int ENsetjuncdata(int index, float elev, float dmnd, string dmndpat);

        [DllImport(EPANETDLL, EntryPoint = "ENsettankdata")]
        public static extern int ENsettankdata(int index, float elev, float initlvl, float minlvl, float maxlvl, float diam, float minvol, string volcurve);

        [DllImport(EPANETDLL, EntryPoint = "ENgetcoord")]
        public static extern int ENgetcoord(int index, ref double x, ref double y);

        [DllImport(EPANETDLL, EntryPoint = "ENsetcoord")]
        public static extern int ENsetcoord(int index, double x, double y);

        [DllImport(EPANETDLL, EntryPoint = "ENgetnodevalues")]
        public static extern int ENgetnodevalues(int param, ref float values);

        //Nodal Demand Functions
        [DllImport(EPANETDLL, EntryPoint = "ENgetdemandmodel")]
        public static extern int ENgetdemandmodel(ref int model, ref float pmin, ref float preq, ref float pexp);

        [DllImport(EPANETDLL, EntryPoint = "ENsetdemandmodel")]
        public static extern int ENsetdemandmodel(int model, float pmin, float preq, float pexp);

        [DllImport(EPANETDLL, EntryPoint = "ENadddemand")]
        public static extern int ENadddemand(int nodeIndex, float baseDemand, string demandPattern, string demandName);

        [DllImport(EPANETDLL, EntryPoint = "ENdeletedemand")]
        public static extern int ENdeletedemand(int nodeIndex, int demandIndex);

        [DllImport(EPANETDLL, EntryPoint = "ENgetdemandindex")]
        public static extern int ENgetdemandindex(int nodeIndex, string demandName, ref int demandIndex);

        [DllImport(EPANETDLL, EntryPoint = "ENgetnumdemands")]
        public static extern int ENgetnumdemands(int nodeIndex, ref int numDemands);

        [DllImport(EPANETDLL, EntryPoint = "ENgetbasedemand")]
        public static extern int ENgetbasedemand(int nodeIndex, int demandIndex, ref float baseDemand);

        [DllImport(EPANETDLL, EntryPoint = "ENsetbasedemand")]
        public static extern int ENsetbasedemand(int nodeIndex, int demandIndex, float baseDemand);

        [DllImport(EPANETDLL, EntryPoint = "ENgetdemandpattern")]
        public static extern int ENgetdemandpattern(int nodeIndex, int demandIndex, ref int patIndex);

        [DllImport(EPANETDLL, EntryPoint = "ENsetdemandpattern")]
        public static extern int ENsetdemandpattern(int nodeIndex, int demandIndex, int patIndex);

        [DllImport(EPANETDLL, EntryPoint = "ENgetdemandname")]
        public static extern int ENgetdemandname(int nodeIndex, int demandIndex, string demandName);

        [DllImport(EPANETDLL, EntryPoint = "ENsetdemandname")]
        public static extern int ENsetdemandname(int nodeIndex, int demandIndex, string demandName);


        //Link Functions
        [DllImport(EPANETDLL, EntryPoint = "ENaddlink")]
        public static extern int ENaddlink(string id, int linkType, string fromNode, string toNode, ref int index);

        [DllImport(EPANETDLL, EntryPoint = "ENdeletelink")]
        public static extern int ENdeletelink(int index, int actionCode);

        [DllImport(EPANETDLL, EntryPoint = "ENgetlinkindex")]
        public static extern int ENgetlinkindex(string id, ref int index);

        [DllImport(EPANETDLL, EntryPoint = "ENgetlinkid")]
        public static extern int ENgetlinkid(int index, string id);

        [DllImport(EPANETDLL, EntryPoint = "ENsetlinkid")]
        public static extern int ENsetlinkid(int index, string newid);

        [DllImport(EPANETDLL, EntryPoint = "ENgetlinktype")]
        public static extern int ENgetlinktype(int index, ref int linkType);

        [DllImport(EPANETDLL, EntryPoint = "ENsetlinktype")]
        public static extern int ENsetlinktype(ref int index, int linkType, int actionCode);

        [DllImport(EPANETDLL, EntryPoint = "ENgetlinknodes")]
        public static extern int ENgetlinknodes(int index, ref int node1, ref int node2);

        [DllImport(EPANETDLL, EntryPoint = "ENsetlinknodes")]
        public static extern int ENsetlinknodes(int index, int node1, int node2);

        [DllImport(EPANETDLL, EntryPoint = "ENgetlinkvalue")]
        public static extern int ENgetlinkvalue(int index, int param, ref float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetlinkvalue")]
        public static extern int ENsetlinkvalue(int index, int param, float value);

        [DllImport(EPANETDLL, EntryPoint = "ENsetpipedata")]
        public static extern int ENsetpipedata(int index, float length, float diam, float rough, float mloss);

        [DllImport(EPANETDLL, EntryPoint = "ENgetvertexcount")]
        public static extern int ENgetvertexcount(int index, ref int count);

        [DllImport(EPANETDLL, EntryPoint = "ENgetvertex")]
        public static extern int ENgetvertex(int index, int vertex, ref double x, ref double y);

        [DllImport(EPANETDLL, EntryPoint = "ENsetvertices")]
        public static extern int ENsetvertices(int index, ref double[] x, ref double[] y, int count);

        [DllImport(EPANETDLL, EntryPoint = "ENgetlinkvalues")]
        public static extern int ENgetlinkvalues(int param, ref float values);

